# bus_gallery

./: .gitignore  .tmp-mvn-settings.xml  ABOUT.md  API_DOCS.md  BUSINESS_FLOWS.md  README.md  ROUTE_CODE_GUIDE.md  UPLOAD_MODULE_FLOWS.md  deploy.py  file-list.txt  tmp_prev_upload.vue  upload_stress_report.json  upload_stress_report_local_clean_round2.json  upload_stress_report_local_nginx_open.json  upload_stress_report_server_1000.json  upload_stress_report_server_200_c5.json  upload_stress_report_server_900_slow.json  upload_stress_report_server_900_slow_smoke.json  upload_stress_report_server_smoke.json  upload_stress_test.py  图片访问与MinIO安全流程.md  审核与后台治理流程.md  技术难点.txt  排查报告.md  消息队列副作用流程.md  认证与会话流程.md  评论收藏与互动流程.md  车辆浏览与快照流程.md
.tmp/: api_bus.json  backend_logs.py  build_frontend.py  bus_73zgzg.html  bus_7abcde.html  bus_7yiwti.html  bus_detail.html  (+135 more)
busGallery-desktop/: CMakeLists.txt  build.bat  buspedia_scraper.py  main.cpp  requirements.txt
busGallery-desktop/api/: ApiClient.cpp  ApiClient.h  AuthApi.cpp  AuthApi.h  CatalogApi.cpp  CatalogApi.h  PlateAssistantBridge.cpp  PlateAssistantBridge.h  UploadApi.cpp  UploadApi.h
busGallery-desktop/models/: CatalogItem.h  UserProfile.h  VehiclePayload.h
busGallery-desktop/ui/: AutocompleteField.cpp  AutocompleteField.h  ClearableDateEdit.cpp  ClearableDateEdit.h  ImageDropZone.cpp  ImageDropZone.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  RegionPicker.cpp  RegionPicker.h
busGallery-desktop/utils/: ChinaRegions.h  Config.h  ImageProcessor.cpp  ImageProcessor.h  ThemeManager.cpp  ThemeManager.h
(+556 files in other folders)
